--- a/activities.html
+++ b/activities.html
@@ -1,77 +1,70 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="mn">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Activities</title>
+    <title>Чи яг юу хиймээр байна?</title>
     <link rel="stylesheet" href="css/activities.css" />
   </head>
   <body>
-    <div id="activityquestion"><b>What are we doing after?</b></div>
+    <div id="activityquestion"><b>Юу хийх вэ? Миний хүү</b></div>
     <div class="activities-selection">
       <div class="activity-item">
-        <img src="activities/aquarium.jpeg" alt="aquarium" />
+       
+      </div>
+      <div class="activity-item">
+        <img src="activities/arcade.jpeg" alt="PC" />
         <label
           ><input
             type="checkbox"
             name="activities"
-            value="aquarium"
-          />aquarium</label
+            value="PC"
+          />Тоглоё</label
         >
       </div>
       <div class="activity-item">
-        <img src="activities/arcade.jpeg" alt="arcade" />
+        <img src="activities/cinema.jpeg" alt="Кино үзье" />
         <label
           ><input
             type="checkbox"
             name="activities"
-            value="arcade"
-          />arcade</label
+            value="Кино үзье"
+          />Кино үзье</label
         >
       </div>
       <div class="activity-item">
-        <img src="activities/cinema.jpeg" alt="cinema" />
+        <img src="https://i.ytimg.com/vi/zadxEvylsw8/maxresdefault.jpg"="cat" />
         <label
           ><input
             type="checkbox"
             name="activities"
-            value="cinema"
-          />cinema</label
+            value="cat"
+          />Cat Cafe</label
         >
       </div>
       <div class="activity-item">
-        <img src="activities/keramika.jpeg" alt="ceramics" />
+        <img src="activities/kunsthalle.jpeg" alt="Үзэсгэлэн" />
         <label
           ><input
             type="checkbox"
             name="activities"
-            value="ceramics"
-          />ceramics</label
+            value="Үзэсгэлэн"
+          />Уран зураг үзье</label
         >
       </div>
       <div class="activity-item">
-        <img src="activities/kunsthalle.jpeg" alt="kunsthalle" />
+        <img src="activities/park.jpeg" alt="Цэцэрлэг" />
         <label
           ><input
             type="checkbox"
             name="activities"
-            value="kunsthalle"
-          />exhibition</label
-        >
-      </div>
-      <div class="activity-item">
-        <img src="activities/park.jpeg" alt="park.jpeg" />
-        <label
-          ><input
-            type="checkbox"
-            name="activities"
-            value="park.jpeg"
-          />park</label
+            value="Цэцэрлэг"
+          />Зугаалах  </label
         >
       </div>
     </div>
     <button class="button" onclick="location.href='lastpage.html'">
-      Last page
+      Сүүлийн хуудас
     </button>
   </body>
 </html>
