--- a/food.html
+++ b/food.html
@@ -1,64 +1,55 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="mn">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Food Selection</title>
+    <title>Хоол сонголт</title>
     <link rel="stylesheet" href="css/food.css" />
   </head>
   <body>
     <div id="foodquestion">
-      <b>What food would you like to eat?</b>
+      <b>ямар хоол идэх вэ?</b>
     </div>
 
     <div class="food-selection">
       <div class="food-item">
-        <img src="food/burgers.jpeg" alt="Burgers, fries and fried chicken" />
+        <img src="food/burgers.jpeg" alt="Бургер, шарсан төмс, шарсан тахиа" />
         <label
           ><input
             type="checkbox"
             name="food"
-            value="Burgers, fries and fried chicken"
+            value="Бургер, шарсан төмс, шарсан тахиа"
           />
-          burgers and fried chicken</label
+          Бургер шарсан тахиа</label
         >
+     
       </div>
       <div class="food-item">
-        <img src="food/dog.jpeg" alt="dog" />
+        <img src="food/koreanfood.jpeg" alt="Солонгос хоол" />
         <label
-          ><input type="checkbox" name="food" value="hotdog" /> hotdog</label
+          ><input type="checkbox" name="food" value="Солонгос хоол" /> Солонгос
+          хоол</label
         >
       </div>
       <div class="food-item">
-        <img src="food/koreanfood.jpeg" alt="koreanfood" />
-        <label
-          ><input type="checkbox" name="food" value="Korean food" /> korean
-          food</label
-        >
+        <img src="food/pasta.jpeg" alt="Паста" />
+        <label><input type="checkbox" name="food" value="Паста" /> Паста</label>
       </div>
       <div class="food-item">
-        <img src="food/pasta.jpeg" alt="pasta" />
-        <label><input type="checkbox" name="food" value="pasta" /> pasta</label>
+        <img src="food/pizza.jpeg" alt="Пицца" />
+        <label><input type="checkbox" name="food" value="Пицца" /> Пицца</label>
       </div>
       <div class="food-item">
-        <img src="food/pizza.jpeg" alt="pizza" />
-        <label><input type="checkbox" name="food" value="pizza" /> pizza</label>
+        <img src="http://cdn.eagle.mn/cache/images/3/a/0/e/8/3a0e8f9c1a1a64e77e349ec38cc381bf47b3b223.jpg" alt="Салад" />
+        <label><input type="checkbox" name="food" value="Салад" /> Хуушуур Бууз</label>
       </div>
       <div class="food-item">
-        <img src="food/salad.jpeg" alt="salad" />
-        <label><input type="checkbox" name="food" value="salad" /> salad</label>
-      </div>
-      <div class="food-item">
-        <img src="food/steak.jpeg" alt="steak" />
-        <label><input type="checkbox" name="food" value="steak" /> steak</label>
-      </div>
-      <div class="food-item">
-        <img src="food/sushi.jpeg" alt="sushi" />
-        <label><input type="checkbox" name="food" value="sushi" /> sushi</label>
+        <img src="food/steak.jpeg" alt="Стейк" />
+        <label><input type="checkbox" name="food" value="Стейк" /> Стейк</label>
       </div>
     </div>
     <button class="button" onclick="location.href='dessert.html'">
-      Continue UWU
+      Үргэлжлүүлэх UWU
     </button>
   </body>
 </html>
