--- a/thankyou.html
+++ b/thankyou.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Thank you</title>
+    <title>Asuna❤️</title>
     <link rel="stylesheet" href="css/lastpage.css" />
   </head>
   <body>
-    <div id="thankyou"><b>Thank you</b></div>
+    <div id="thankyou"><b>Мартын 8-ны баярын мэнд хөөрхөн өө!❤️</b></div>
 
     <img id="rizz" src="rizz.gif" alt="rizzler god" class="responsive" />
     <br />
@@ -15,9 +15,9 @@
       <source src="congratulations.mp3" type="audio/mpeg" />
       Your browser does not support the audio element.
     </audio>
-    <h1>Don't go yet!</h1>
+    <h1>👇🏻👇🏻👇🏻</h1>
     <button class="button" onclick="location.href='date.html'">
-      Click me UWU
+      Click me UwU
     </button>
   </body>
 </html>
