--- a/date.html
+++ b/date.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="mn">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Date</title>
+    <title>Asuna❤️</title>
     <link rel="stylesheet" href="css/date.css" />
   </head>
   <body>
-    <h1 title="choose a date">Are you free on ...</h1>
+    <h1 title="Огноо сонгох">Ажил тархад нь очоод авнаа би</h1>
     <form class="form-group">
-      <label>Which day: (select a date)</label>
       <div>
-        <input type="date" />
+        <input type="date" value="2024-03-11" />
         <button class="button" type="submit" formaction="food.html">
-          Submit
+          Заа
         </button>
       </div>
     </form>
